--- a/package.json
+++ b/package.json
@@ -39,5 +39,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": []
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hylian-modding/Core-SuperMario64.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hylian-modding/Core-SuperMario64/issues"
+  },
+  "homepage": "https://github.com/hylian-modding/Core-SuperMario64#readme"
 }
