Forgot some stuff -- pushed last one too early. Cheezepin added to credits and asm/payloads included now.

--- a/cores/SuperMario64/package.json
+++ b/cores/SuperMario64/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "SuperMario64.js",
   "author": "SpiceyWolf, MelonSpeedsuns",
-  "credits": "",
+  "credits": "Cheezepin",
   "license": "GPL3",
   "core": "SuperMario64",
   "updateUrl": "https://raw.githubusercontent.com/hylian-modding/Core-SuperMario64/master/update.json"
